# web-backend

./: Cargo.toml  README.md
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20211221150119_CreateUsersTable.down.sql  20211221150119_CreateUsersTable.up.sql  20220128225330_GenresTable.down.sql  20220128225330_GenresTable.up.sql  20220128225345_UserGenresTable.down.sql  20220128225345_UserGenresTable.up.sql  20220128225405_ShowsTable.down.sql  20220128225405_ShowsTable.up.sql  20220128225425_UserProfile.down.sql  20220128225425_UserProfile.up.sql  20220207204550_SessionsTable.down.sql  20220207204550_SessionsTable.up.sql  20220219003013_AmendSessionTableKey.down.sql  20220219003013_AmendSessionTableKey.up.sql  20220220184942_AddUserIdToShows.down.sql  20220220184942_AddUserIdToShows.up.sql  20220220192654_CreateShowDatesView.down.sql  20220220192654_CreateShowDatesView.up.sql  20220222203136_AddEmbedUrlToProfile.down.sql  20220222203136_AddEmbedUrlToProfile.up.sql  20220222205951_RemoveUserProfilesTable.down.sql  20220222205951_RemoveUserProfilesTable.up.sql  20220222210202_AddUrlsToUsersTable.down.sql  20220222210202_AddUrlsToUsersTable.up.sql  20220404155549_UpdateShowDatesView.up.sql  20220408200846_AddStatusToShow.down.sql  20220408200846_AddStatusToShow.up.sql  20220408201330_UpdateShowDatesViewToAddStatus.up.sql  20220415084124_AddTimeAndCommentsToShows.down.sql  20220415084124_AddTimeAndCommentsToShows.up.sql  20220415085008_UpdateShowsViewToIncludeTimeAndComments.up.sql  20220422125851_AddAvatarToUsersTable.down.sql  (+26 more)
src/: configuration.rs  (+3 more)
(+13 files in other folders)
