[package]
name = "lokoda_backend"
version = "0.3.2"
authors = ["Dave Gill <david.g.h.gill@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "lokoda_backend"

[dependencies]
actix-web = "=4.3.1"
actix-http = "=3.3.1"
actix-session = { version ="0.7.2", features = ["cookie-session"] }
serde = { version = "1.0.159", features = ["derive"]}
config = "0.11.0"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.17"
bcrypt = "0.14.0"
lettre = "0.9.6"
lettre_email = "0.9.4"
native-tls = "0.2.11"
guid-create = "0.3.0"
serde_json = "1.0.95"
futures = "0.3.28"
ammonia = "3.3.0"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "mysql",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "json"
]


